# easybov-py-bootstrap

./: pyproject.toml
easybov/: requirements.txt
easybov/common/: __init__.py  enums.py  models.py  requests.py  rest.py  types.py  websocket.py
easybov/data/: __init__.py  enums.py  mappings.py
easybov/data/live/: b3.py
easybov/data/models/: __init__.py  order_book.py  order_update.py
easybov/examples/: cancel_order_request.py  get_order_request.py  limit_order_request.py
easybov/examples/websocket/: subscribe_books.py  subscribe_orders.py
easybov/trading/: __init__.py  client.py  enums.py  models.py  requests.py
