[tool.poetry]
name = "easybov-py"
version = "0.0.1"
description = "The Official Python SDK for Easybov APIs"
authors = [
    "Leonardo Cardoso <leo@easybov.com>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/easybov/easybov-py"
documentation = "https://easybov/docs/python-sdk/"
packages = [
    { include = "easybov" }
]
include = [ "easybov/py.typed" ]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = ">=1.5.3"
msgpack = "^1.0.3"
websockets = "^11.0.3"
sseclient-py = "^1.7.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
requests-mock = "^1.9.3"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
furo = "^2022.2.14"
Sphinx = "^5.0.1"
sphinx-copybutton = "^0.5.0"
enum-tools = "^0.9.0"
sphinx-toolbox = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.4.2", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable=true

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "alpaca" }
]
